# embflow

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-10-embflow-0.3.0.md
embflow/: __init__.py  backends.py  compare.py  lens.py  nulls.py  ops.py  smooth.py  state.py  validate.py  weights.py
embflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
experiments/: README.md  __init__.py
experiments/prefix_vs_smoothed/: README.md  __init__.py  corpus.py  embedders.py  metrics.py  paths.py  run.py  weightings.py
tests/: test_backends.py  test_core.py  test_motion.py  test_nulls.py  test_state.py  test_validate.py
tests/fixtures/: generate_motionlib_fixture.py  motionlib_fixture.json
