[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "embflow"
dynamic = ["version"]
description = "A calculus over embedding sequences: weighted folds, smoothers, differential operators, and trajectory distance."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "Alex Towell"}]
keywords = ["embeddings", "nlp", "trajectory", "time-series", "semantic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.setuptools.dynamic]
version = {attr = "embflow.__version__"}
